--- a/Rebels/Base.lproj/Main.storyboard
+++ b/Rebels/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="rebelsFont.ttf">
+            <string>Renegado3DItalic</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -302,58 +307,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starsBackground" translatesAutoresizingMaskIntoConstraints="NO" id="kJt-ez-ECm">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PsQ-c5-SF6">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leader" textAlignment="center" lineBreakMode="clip" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuQ-m1-wjC">
-                                <rect key="frame" x="127" y="447" width="120" height="38"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Number of players" textAlignment="center" lineBreakMode="clip" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXH-xZ-Ksn">
-                                <rect key="frame" x="117" y="375" width="141" height="38"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rebelsLogo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yD6-K5-ypF">
-                                <rect key="frame" x="87" y="131" width="200" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rebelsLogo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yD6-K5-ypF">
+                                <rect key="frame" x="8" y="131" width="120" height="120"/>
                                 <color key="tintColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="KUP-JY-YWm"/>
+                                    <constraint firstAttribute="height" constant="120" id="NM8-J1-sKy"/>
+                                </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34Z-FI-iRO">
-                                <rect key="frame" x="87" y="131" width="200" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mission" textAlignment="center" lineBreakMode="clip" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMk-L3-UnS">
-                                <rect key="frame" x="51" y="58" width="273" height="54"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="é o(a) líder desta missão" textAlignment="center" lineBreakMode="clip" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuQ-m1-wjC">
+                                <rect key="frame" x="152" y="196" width="187.5" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="NOY-dc-Mkg"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leader Name" textAlignment="center" lineBreakMode="clip" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXH-xZ-Ksn" userLabel="Leader Name">
+                                <rect key="frame" x="194" y="146" width="102" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="d0t-iF-s21"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34Z-FI-iRO">
+                                <rect key="frame" x="0.0" y="20" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Ihv-Qf-YzD"/>
+                                    <constraint firstAttribute="height" constant="100" id="bJe-w4-vIy"/>
+                                </constraints>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Primeira Missão" textAlignment="center" lineBreakMode="clip" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dMk-L3-UnS">
+                                <rect key="frame" x="100" y="20" width="256.5" height="103"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="103" id="zDr-8J-kw4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Renegado3DItalic" family="Renegado 3D Italic" pointSize="41"/>
                                 <color key="textColor" red="1" green="1" blue="0.047865316900000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="kJt-ez-ECm" firstAttribute="centerY" secondItem="9f2-8y-Cwx" secondAttribute="centerY" id="IkH-N1-p1d"/>
-                            <constraint firstItem="kJt-ez-ECm" firstAttribute="leading" secondItem="J8y-ql-ykA" secondAttribute="leading" id="NIW-c5-XLR"/>
-                            <constraint firstItem="kJt-ez-ECm" firstAttribute="bottom" secondItem="J8y-ql-ykA" secondAttribute="bottom" id="XQf-6S-hFi"/>
-                            <constraint firstItem="kJt-ez-ECm" firstAttribute="top" secondItem="9f2-8y-Cwx" secondAttribute="top" id="gz8-e7-p04"/>
-                            <constraint firstItem="kJt-ez-ECm" firstAttribute="centerX" secondItem="9f2-8y-Cwx" secondAttribute="centerX" id="kzL-lX-ud5"/>
-                            <constraint firstItem="kJt-ez-ECm" firstAttribute="trailing" secondItem="J8y-ql-ykA" secondAttribute="trailing" id="r6A-cT-vol"/>
+                            <constraint firstItem="yD6-K5-ypF" firstAttribute="leading" secondItem="J8y-ql-ykA" secondAttribute="leading" constant="8" id="0k5-3P-b6g"/>
+                            <constraint firstItem="J8y-ql-ykA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jXH-xZ-Ksn" secondAttribute="trailing" symbolic="YES" id="2V3-Us-bMK"/>
+                            <constraint firstItem="J8y-ql-ykA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cuQ-m1-wjC" secondAttribute="trailing" symbolic="YES" id="4Oz-XY-uB8"/>
+                            <constraint firstItem="dMk-L3-UnS" firstAttribute="leading" secondItem="34Z-FI-iRO" secondAttribute="trailing" id="8MG-Hf-yPS"/>
+                            <constraint firstItem="PsQ-c5-SF6" firstAttribute="bottom" secondItem="J8y-ql-ykA" secondAttribute="bottom" id="DMC-6Q-qRT"/>
+                            <constraint firstItem="cuQ-m1-wjC" firstAttribute="leading" secondItem="yD6-K5-ypF" secondAttribute="trailing" constant="24" id="NFB-kp-WO5"/>
+                            <constraint firstItem="yD6-K5-ypF" firstAttribute="top" secondItem="dMk-L3-UnS" secondAttribute="bottom" constant="8" id="Oab-gT-f17"/>
+                            <constraint firstItem="cuQ-m1-wjC" firstAttribute="top" secondItem="jXH-xZ-Ksn" secondAttribute="bottom" constant="10" id="Us9-QY-3SV"/>
+                            <constraint firstItem="jXH-xZ-Ksn" firstAttribute="leading" secondItem="yD6-K5-ypF" secondAttribute="trailing" constant="66" id="V2A-tj-jKz"/>
+                            <constraint firstItem="jXH-xZ-Ksn" firstAttribute="top" secondItem="dMk-L3-UnS" secondAttribute="bottom" constant="23" id="WIp-pZ-a0z"/>
+                            <constraint firstItem="34Z-FI-iRO" firstAttribute="top" secondItem="J8y-ql-ykA" secondAttribute="top" id="gvh-Yr-8hl"/>
+                            <constraint firstItem="34Z-FI-iRO" firstAttribute="leading" secondItem="J8y-ql-ykA" secondAttribute="leading" id="nLP-nd-i8Y"/>
+                            <constraint firstItem="J8y-ql-ykA" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dMk-L3-UnS" secondAttribute="trailing" symbolic="YES" id="oN4-Xj-gCK"/>
+                            <constraint firstItem="dMk-L3-UnS" firstAttribute="top" secondItem="J8y-ql-ykA" secondAttribute="top" id="ozK-dn-lfE"/>
+                            <constraint firstItem="PsQ-c5-SF6" firstAttribute="centerY" secondItem="9f2-8y-Cwx" secondAttribute="centerY" id="rXv-Nq-27u"/>
+                            <constraint firstItem="PsQ-c5-SF6" firstAttribute="leading" secondItem="34Z-FI-iRO" secondAttribute="leading" id="rdZ-gn-Hfc"/>
+                            <constraint firstItem="PsQ-c5-SF6" firstAttribute="centerX" secondItem="9f2-8y-Cwx" secondAttribute="centerX" id="wEp-0N-BjP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="J8y-ql-ykA"/>
                     </view>
                     <navigationItem key="navigationItem" id="CZe-HX-iZJ">
                         <barButtonItem key="backBarButtonItem" title="Back" id="PEb-xo-0PK"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="backgroundVideo" destination="PsQ-c5-SF6" id="azL-Wa-znf"/>
+                        <outlet property="button" destination="34Z-FI-iRO" id="qgg-Z8-CgV"/>
+                        <outlet property="image" destination="yD6-K5-ypF" id="AVq-xE-Vhs"/>
+                        <outlet property="leaderName" destination="jXH-xZ-Ksn" id="JqQ-gC-215"/>
+                        <outlet property="missionTitle" destination="dMk-L3-UnS" id="s4v-zt-s6O"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vNa-23-gcG" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1718" y="1012"/>
+            <point key="canvasLocation" x="1717.5999999999999" y="1011.544227886057"/>
         </scene>
         <!--Show Team View Controller-->
         <scene sceneID="3JH-ry-ntr">
@@ -444,7 +480,7 @@
         <image name="RebelsLabel3" width="178" height="31"/>
         <image name="add_user_male" width="45" height="45"/>
         <image name="rebelsLogo" width="529" height="530"/>
-        <image name="starsBackground" width="162" height="320"/>
+        <image name="starsBackground" width="540" height="960"/>
         <image name="tatooine" width="1275" height="2313"/>
         <image name="trashCan" width="128" height="128"/>
     </resources>
